exer petshop e conexao com o banco

--- a/projeto-banco/pom.xml
+++ b/projeto-banco/pom.xml
@@ -18,6 +18,14 @@
             <artifactId>spring-jdbc</artifactId>
             <version>5.0.5.RELEASE</version>
         </dependency>
+        
+        <!-- https://mvnrepository.com/artifact/com.github.javafaker/javafaker -->
+        <dependency>
+            <groupId>com.github.javafaker</groupId>
+            <artifactId>javafaker</artifactId>
+            <version>1.0.2</version>
+        </dependency>
+
         <dependency>
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-dbcp2</artifactId>
@@ -30,6 +38,6 @@
             <version>1.4.199</version>
         </dependency>
         
-</dependencies>
+    </dependencies>
 
 </project>
